# clint

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_basic_responses.py
.github/compliance/: inventory.yml
.github/workflows/: ci.yml
auto_test_tool/: agent.py  hooks.py  mcp_server.py  ports.py  recorder.py  replay.py  runner.py  template.py
auto_test_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clint/: agent.py  mcp_server.py  runner.py
plans/: smoke-test.plan.yaml
scenarios/: claude-code-hello-world.yaml  copilot-hello-world-clean.yaml  copilot-hello-world.yaml  init-basic-bug-finder.yaml  init-basic-responses-agent.yaml  init-from-code.yaml  init-template-python.yaml  smoke-test.yaml  with-setup.yaml
scenarios/azd_ai_agent/: init-basic-responses-agent.yaml  init-quickstart.yaml  repro-8360-duplicate-project.yaml  repro-8523-init-from-manifest-in-cwd.yaml  sample-01-basic.yaml  sample-02-tools.yaml  sample-invocations-01-basic.yaml
scenarios/azd_ai_agent_copilot/: tobi-first-turns-azd-ai-doc.yaml  tobi-first-turns.yaml  web-search-agent-azd-ai-doc.yaml  web-search-agent.yaml
screenshots/agent_20260526_182633/: final.txt  report.html  result.json  step_001.txt  step_002.txt
screenshots/agent_20260526_183016/: report.html  result.json  step_001.txt  (+11 more)
scripts/: extract_turns.py
tests/: test_instance_keying.py  test_plan_recorder.py  test_port_pool.py  test_replay_runner.py  test_scenario_substitution.py  test_select_by_text.py  test_session_name.py  test_template.py  test_tmux_env_propagation.py
(+3 files in other folders)
