[project]
name = "clint"
version = "0.2.0"
description = "clint — drive and test interactive CLIs and AI coding assistants (Copilot CLI, Claude Code, Codex) with goal-based scenarios over MCP"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
clint = "clint.mcp_server:main"

[tool.setuptools.packages.find]
include = ["clint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
